--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=nfblabs
 server.port=8080
 
 # Configuración de la base de datos MySQL (XAMPP)
-spring.datasource.url=jdbc:mysql://localhost:3306/nfslabdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306
 spring.datasource.username=root
 spring.datasource.password=
 
