--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=nfblabs
 # Puerto de la aplicación
+server.address=0.0.0.0
 server.port=8080
 
 # Configuración de la base de datos MySQL (XAMPP)
